Adding Prosper Form Links

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       <h2 class="sidebar-title">Quick Actions</h2>
 
       <div class="quick-actions">
-        <button class="quick-card">
+        <button class="quick-card" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfcoH3C0-5pj1wK3N4NobO1gTBBLmGq2UJAx0DK8-HEm82Gpw/viewform?pli=1', '_blank')">
           <div class="quick-icon">⏰</div>
           <div class="quick-content">
             <div class="quick-title">Time Off Request</div>
@@ -52,7 +52,7 @@
           </div>
         </button>
 
-        <button class="quick-card">
+        <button class="quick-card"  onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeRKWyixcjtib4yJ_2dfzcB6YKQFUVE5i6hpUwlmAdeenSb4w/viewform', '_blank')">
           <div class="quick-icon">⚠️</div>
           <div class="quick-content">
             <div class="quick-title">Incident Report</div>
@@ -68,7 +68,7 @@
           </div>
         </button>
 
-        <button class="quick-card">
+        <button class="quick-card" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfE9uFm_zADvgWIdUwNdqjzFSsLYHA_NnZa8rgVjOIIuAtAjA/viewform')">
           <div class="quick-icon">👥</div>
           <div class="quick-content">
             <div class="quick-title">HR Contacts</div>
