removed template message and fixed chat container placement

--- a/public/index.html
+++ b/public/index.html
@@ -102,42 +102,11 @@
             <div class="avatar avatar-benny-small">B</div>
             <div class="message-bubble bot-bubble">
               <p>
-                Hello Michael! I'm Benny, your Benefits Coordinator AI. Ask me anything
+                Hello! I'm Benny, your Benefits Coordinator AI. Ask me anything
                 about your Prosper benefits and I'll get you an answer right away.
               </p>
               <span class="message-meta">2:30 PM</span>
             </div>
-          </div>
-
-          <!-- User message -->
-          <div class="message-row user">
-            <div class="message-bubble user-bubble">
-              <p>Can you give me an email address to VA?</p>
-              <span class="message-meta">2:31 PM</span>
-            </div>
-            <div class="avatar avatar-user-small">M</div>
-          </div>
-
-          <!-- Benny message -->
-          <div class="message-row bot">
-            <div class="avatar avatar-benny-small">B</div>
-            <div class="message-bubble bot-bubble">
-              <p>
-                I'm sorry, but I can't provide specific email addresses. If you need to
-                contact the VA, please visit their official website for the appropriate
-                contact information.
-              </p>
-              <span class="message-meta">2:31 PM</span>
-            </div>
-          </div>
-
-          <!-- User message -->
-          <div class="message-row user">
-            <div class="message-bubble user-bubble">
-              <p>Can you give me an email address to Monitoring?</p>
-              <span class="message-meta">2:32 PM</span>
-            </div>
-            <div class="avatar avatar-user-small">M</div>
           </div>
         </div>
 
